--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,6 @@
     <string name="sign_out">LOG OUT</string>
     <string name="profile">PROFILE</string>
     <string name="publish">PUBLISH</string>
-    <string name="users">USERS</string>
     <string name="edit">EDIT</string>
     <string name="categories">CATEGORIES</string>
     <string name="published">PUBLISHED</string>
@@ -83,11 +82,9 @@
     <string name="login_disclaimer">THIS MENU IS ONLY FOR FAIAM NA TEAM MEMBERS</string>
 
     <!-- APP BAR MENU -->
-    <string name="home">HOME</string>
-    <string name="trending">TRENDING</string>
-    <string name="info">INFO</string>
-    <string name="search">SEARCH</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Home</string>
+    <string name="trending">Trending</string>
+    <string name="info">Info</string>
+    <string name="search">Search</string>
+    <string name="users">Users</string>
 </resources>
